Prevent popup button text from wrapping

--- a/style.scss
+++ b/style.scss
@@ -673,7 +673,7 @@ textarea {
   }
 
   .popup-details {
-    flex-basis: 100%;
+    flex-basis: 90%;
   }
 
   .popup-desc-right {
